--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
   </head>
   <body>
     <div id="root"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/yookassa-landing/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>YooKassa for Unity</title>
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
   </body>
 </html>
