--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <title>YooKassa for Unity</title>
 
   <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet"
+      href="https://unpkg.com/tailwindcss@3.4.4/dist/tailwind.min.css" />
 </head>
   </body>
 </html>
