--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="root"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>YooKassa for Unity</title>
+
+  <!-- Tailwind CSS CDN -->
+<link rel="stylesheet"
+      href="https://unpkg.com/tailwindcss@3.4.4/dist/tailwind.min.css" />
+</head>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
