--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/yookassa-landing/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YooKassa for Unity</title>
-    <!-- Tailwind CSS CDN (или свой билд) -->
+
+    <!-- Tailwind CSS CDN -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/tailwindcss@3.4.4/dist/tailwind.min.css"
