--- a/index.html
+++ b/index.html
@@ -1,12 +1,151 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YooKassa for Unity</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>YooKassa for Unity</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: sans-serif;
+      background: #f5f5f5;
+    }
+
+    .container {
+      display: flex;
+      height: 100vh;
+    }
+
+    .left-section {
+      background: linear-gradient(to bottom, #0b1e3a, #07162a);
+      flex: 0.35;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .left-section img {
+      max-width: 180px;
+      height: auto;
+    }
+
+    .right-section {
+      flex: 0.65;
+      padding: 60px 40px;
+      background: #ffffff;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+
+    .title {
+      font-size: 36px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    .subtitle {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 40px;
+    }
+
+    .features {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
+    .feature-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 24px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      width: 200px;
+    }
+
+    .feature-card img {
+      width: 32px;
+      height: 32px;
+      margin-bottom: 12px;
+    }
+
+    .feature-title {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 6px;
+    }
+
+    .feature-desc {
+      font-size: 14px;
+      color: #333;
+    }
+
+    .early-access {
+      margin-bottom: 30px;
+      background: #f9f9f9;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    .early-access input {
+      padding: 10px;
+      font-size: 14px;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .disclaimer {
+      font-size: 13px;
+      color: #777;
+      margin-top: auto;
+      margin-top: 30px;
+      line-height: 1.5;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="left-section">
+      <img src="/assets/logo-yookassa-unity-white.png" alt="YooKassa for Unity" />
+    </div>
+    <div class="right-section">
+      <div class="title">YooKassa for Unity</div>
+      <div class="subtitle">Первый неофициальный SDK, который подключает YooKassa в Unity-игры на Android за 30 минут.</div>
+
+      <div class="features">
+        <div class="feature-card">
+          <img src="/assets/check.png" alt="Full integration" />
+          <div class="feature-title">Полная интеграция</div>
+          <div class="feature-desc">Приём платежей, web-hooks, чеки 54-ФЗ — всё из коробки.</div>
+        </div>
+        <div class="feature-card">
+          <img src="/assets/book-open.png" alt="Docs" />
+          <div class="feature-title">Документация RU/EN</div>
+          <div class="feature-desc">Чёткий гайд + пример сцены. Запустите демо и меняйте префабы.</div>
+        </div>
+        <div class="feature-card">
+          <img src="/assets/server.png" alt="Deploy" />
+          <div class="feature-title">Безболезненный деплой</div>
+          <div class="feature-desc">UPM-пакет + Docker-сервер за 1 команду. Никаких шаманств.</div>
+        </div>
+      </div>
+
+      <div class="early-access">
+        <p style="margin-bottom: 10px; font-size: 14px;">Хотите ранний доступ и скидку Early-bird?</p>
+        <input type="email" placeholder="Оставьте e-mail..." />
+      </div>
+
+      <div class="disclaimer">
+        YooKassa for Unity — это неофициальный SDK, созданный независимыми разработчиками. Он не связан с YooMoney или Сбером. Используется на свой страх и риск. Мы просто хотим облегчить вам жизнь.
+      </div>
+    </div>
+  </div>
+</body>
 </html>
